# ChronoMoEv2

./: README.md  pyproject.toml
chronomoe/: __init__.py  events.py  io.py  lens.py  metrics.py  probes.py  snapshots.py
chronomoe/controller/: __init__.py  decisions.py  hooks.py  policy.py  priors.py  state.py
docs/: CLAIM.md  PHASE2_SUMMARY.md  architecture.md  lens_design.md  phase1_telemetry.md
examples/nanomoe_integration/: README.md
experiments/: README.md  clock3_ab.py  shock_profiles.py
tests/: test_pathology_probes.py  test_phase1_regression.py  test_phase2_controller.py
